Fixed vertical alignment of checkbox when opening session abstract

--- a/app/styles/_schedule.scss
+++ b/app/styles/_schedule.scss
@@ -148,7 +148,7 @@
         background: #e6e6e6;
         border-left: 2px solid #ddd;
         margin-right: -2px;
-        padding: 0 10px;
+        padding: 10px;
         width: 35px;
 
         button {
@@ -156,6 +156,10 @@
             height: 40px;
             border: 0;
             background: transparent url(../images/check.png);
+
+            &.positioned {
+                position: absolute;
+            }
 
             &.checked {
                 background-position: 0 -100px;
